tests/errors/parser/invalid-width2.expect
---CODE---
1
---STDERR---
Error: tests/errors/parser/invalid-width2.futil
4 |    r.in = 5'xaa;
  |           ^^^^^ Parse error
Cannot represent given literal 'aa' in 5 bits
